--- a/audio-video.html
+++ b/audio-video.html
@@ -37,7 +37,7 @@
   <!-- Hero Section -->
   <section class="hero" style="background-image: url('images/placeholder-hero-av.jpg');"></section>
   <div class="hero-text">
-    <h1>Audio-Video Solutions</h1>
+    <h1>Audio-Video Integration</h1>
     <p>Seamless Integration for Home Entertainment & Security</p>
   </div>
 
@@ -55,9 +55,9 @@
   <section class="content-block right">
     <div class="image" style="background-image: url('images/placeholder-av2.jpg');"></div>
     <div class="text">
-      <h2>Invisible Speakers & Distributed Audio</h2>
+      <h2>Customized Speakers & Distributed Audio</h2>
       <p>
-        Keep your space elegant while still enjoying premium sound. Our invisible speaker and distributed audio systems deliver rich, 
+        Keep your space elegant while still enjoying premium sound. Our customized speaker and distributed audio systems deliver rich, 
         balanced sound throughout your home without compromising interior aesthetics.
       </p>
     </div>
