--- a/electrical-integration.html
+++ b/electrical-integration.html
@@ -42,7 +42,7 @@
   </div>
 
   <section class="content-block right">
-    <div class="image" style="background-image: url('images/placeholder-electric2.jpg');"></div>
+    <div class="image" style="background-image: url('images/placeholder-electric1.jpg');"></div>
     <div class="text">
       <h2>Residential and Commercial Wiring</h2>
       <p>
@@ -58,18 +58,18 @@
         Future-proof your home with EV car charger installations. Whether it’s Tesla, Level 2, or universal ports, we ensure efficient and code-compliant setups.
       </p>
     </div>
-    <div class="image" style="background-image: url('images/placeholder-electric1.jpg');"></div>
+    <div class="image" style="background-image: url('images/placeholder-electric2.jpg');"></div>
   </section>
 
-  <section class="content-block left">
+  <!-- <section class="content-block left">
     <div class="text">
       <h2>Applicance Hookup</h2>
       <p>
         Blah blah blah
       </p>
     </div>
-    <div class="image" style="background-image: url('images/placeholder-electric1.jpg');"></div>
-  </section>
+    <div class="image" style="background-image: url('images/placeholder-electric3.jpg');"></div>
+  </section> -->
   
 
   <section class="gallery-section">
@@ -77,8 +77,14 @@
     <div class="gallery-wrapper">
       <button class="nav prev">&#10094;</button>
       <div class="gallery-slider">
+        <img src="images/electric-installation-gallery-1.jpg" class="gallery-image" alt="Installation Project 1" />
         <img src="images/electric-installation-gallery-2.jpg" class="gallery-image" alt="Installation Project 2" />
+        <img src="images/electric-installation-gallery-3.jpg" class="gallery-image" alt="Installation Project 3" />
         <img src="images/electric-installation-gallery-4.jpg" class="gallery-image" alt="Installation Project 4" />
+        <img src="images/electric-installation-gallery-5.jpg" class="gallery-image" alt="Installation Project 5" />
+        <img src="images/electric-installation-gallery-6.jpg" class="gallery-image" alt="Installation Project 6" />
+        <img src="images/electric-installation-gallery-7.jpg" class="gallery-image" alt="Installation Project 7" />
+        <img src="images/electric-installation-gallery-8.jpg" class="gallery-image" alt="Installation Project 8" />
       </div>
       <button class="nav next">&#10095;</button>
     </div>
