--- a/index.html
+++ b/index.html
@@ -54,10 +54,16 @@
             <a href="#services" class="hero-button">Explore Services</a>
         </div>
 
-        <!-- Facebook icon button -->
-        <a href="https://www.facebook.com/intellisvisionca" target="_blank" class="fb-icon-button" aria-label="Facebook">
+        <div class="media-icons">
+          <!-- Facebook icon button -->
+          <a href="https://www.facebook.com/intellisvisionca" target="_blank" class="media-icon-button" aria-label="Facebook">
             <img src="images/facebook-icon.png" alt="Facebook" />
-        </a>
+          </a>
+          <!-- Instagram icon button -->
+          <a href="https://www.instagram.com/intellisvision/" target="_blank" class="media-icon-button" aria-label="Instagram">
+            <img src="images/instagram-icon.png" alt="Instagram" />
+          </a>
+        </div>
     </section>
 
 
@@ -110,7 +116,7 @@
         
         <div class="feature-box">
           <h3>Lutron Dealer</h3>
-          <p>Lighting, shades, audio-video, security, and connectivity—seamlessly integrated.</p>
+          <p>Lutron is the undisputed leader in the lighting control and electronic shades industry.</p>
         </div>
 
         <div class="feature-box">
@@ -123,45 +129,45 @@
     </div>
     <div class="feature-box">
       <h3>2-Year Labor Warranty</h3>
-      <p>We stand by our work with one of the best guarantees in the industry.</p>
+      <p>White glove service & respect for your home. We stand by our work with one of the best guarantees in the industry.</p>
     </div>
     <div class="feature-box">
       <h3>Personalized Consultation</h3>
       <p>No-pressure estimates tailored to your unique space and needs.</p>
     </div>
+    <div class="feature-box">
+      <h3>Full-Service Solutions</h3>
+      <p>Experienced in custom project installations. No need to hire other trades.</p>
+    </div>
+    <div class="feature-box">
+      <h3>Customized to Your Lifestyle</h3>
+      <p>Tailored smart solutions that match your habits, routines, and interior preferences—made just for you.</p>
+    </div>
+    <div class="feature-box">
+      <h3>Ongoing Support & Satisfaction</h3>
+      <p>With you even after installation, offering reliable support and ensuring long-term satisfaction.</p>
+    </div>
   </div>
 
   <div class="reasons-columns">
-    <ul>
-      <li>Full-service solutions—no need to hire other trades.</li>
-      <li>White glove service & respect for your home.</li>
-    </ul>
-    <ul>
-      <li>Customized to your lifestyle and needs.</li>
-      <li>Complete satisfaction and ongoing support.</li>
-      <li>Always ahead on tech & trends.</li>
-      <li>Certified team with manufacturer qualifications.</li>
-      <li>Experienced in custom project installations.</li>
-
-    </ul>
   </div>
 </section>
 
 
     <!-- Testimonials Carousel -->
-    <section class="testimonials">
+    <!-- <section class="testimonials"> -->
         
       <!-- Elfsight Google Reviews | Untitled Google Reviews -->
-      <script src="https://static.elfsight.com/platform/platform.js" async></script>
+      <!-- <script src="https://static.elfsight.com/platform/platform.js" async></script>
       <div class="elfsight-app-f45054f1-e8c0-4fc0-9a3e-1a1e806a9441" data-elfsight-app-lazy></div>
-    </section>
+    </section> -->
 
 
     <!-- Contact -->
     <footer class="footer" id="contact">
         <div class="footer-content">
             <h2>Contact Us</h2>
-            <p>Contact us today for your free estimation.</p>
+            <p>Contact us today for your customized estimation!</p>
             <div class="contact-details">
             <p><strong>Phone:</strong> 416-315-3934</p>
             <p><strong>Email:</strong> <a href="mailto:support@intellisvision.ca">support@intellisvision.ca</a></p>
@@ -170,7 +176,7 @@
         <!-- Contact Form Below Footer -->
         <section class="contact-form-section">
         <div class="contact-form">
-            <form action="https://formsubmit.co/dacianlupus8@gmail.com" method="POST">
+            <form action="https://formsubmit.co/support@intellisvision.ca" method="POST">
             <div class="form-row">
                 <div class="form-group">
                 <label for="firstName">First Name *</label>
