--- a/lighting.html
+++ b/lighting.html
@@ -36,9 +36,9 @@
   
   
 
-  <section class="hero" style="background-image: url('images/placeholder-hero-lighting.jpg');"></section>
+  <section class="hero" style="background-image: url('images/lighting-hero.jpg');"></section>
       <div class="hero-text">
-        <h1>Lighting Solutions</h1>
+        <h1>Lighting & Lighting Control</h1>
         <p>Elegant, Efficient, and Expertly Installed</p>
       </div>
   </section>
@@ -91,7 +91,7 @@
         <img src="images/lighting-gallery-3a.jpg" class="gallery-image" alt="Lighting Project 3" />
         <img src="images/lighting-gallery-10.jpg" class="gallery-image" alt="Lighting Project 10" />
         <img src="images/lighting-gallery-4.jpg" class="gallery-image" alt="Lighting Project 4" />
-        <img src="images/electric-installation-gallery-5.jpg" class="gallery-image" alt="Installation Project 5" />
+        <img src="images/lighting-gallery-fan.jpg" class="gallery-image" alt="Installation Project 5" />
         <img src="images/lighting-gallery-5.jpg" class="gallery-image" alt="Lighting Project 5" />
         <img src="images/lighting-gallery-12.jpg" class="gallery-image" alt="Lighting Project 12" />
         <img src="images/lighting-gallery-6.jpg" class="gallery-image" alt="Lighting Project 6" />
@@ -103,6 +103,16 @@
         <img src="images/lighting-gallery-13.jpg" class="gallery-image" alt="Lighting Project 13" />
         <img src="images/lighting-gallery-15.jpg" class="gallery-image" alt="Lighting Project 15" />
         <img src="images/lighting-gallery-16.jpg" class="gallery-image" alt="Lighting Project 16" />
+        <img src="images/lighting-gallery-17.jpg" class="gallery-image" alt="Lighting Project 17" />
+        <img src="images/lighting-gallery-18.jpg" class="gallery-image" alt="Lighting Project 18" />
+        <img src="images/lighting-gallery-19.jpg" class="gallery-image" alt="Lighting Project 19" />
+        <img src="images/lighting-gallery-20.jpg" class="gallery-image" alt="Lighting Project 20" />
+        <img src="images/lighting-gallery-21.jpg" class="gallery-image" alt="Lighting Project 21" />
+        <img src="images/lighting-gallery-22.jpg" class="gallery-image" alt="Lighting Project 22" />
+        <img src="images/lighting-gallery-23.jpg" class="gallery-image" alt="Lighting Project 23" />
+        <img src="images/lighting-gallery-24.jpg" class="gallery-image" alt="Lighting Project 24" />
+        
+          
       </div>
       <button class="nav next">&#10095;</button>
     </div>
