--- a/motorized-shades.html
+++ b/motorized-shades.html
@@ -42,7 +42,7 @@
     Your browser does not support the video tag.
   </video>
   <div class="hero-text">
-    <h1>Motorized Shades</h1>
+    <h1>Motorized Lutron Shades</h1>
     <p>Elegant, Efficient, and Expertly Installed</p>
   </div>
 </section>
@@ -50,9 +50,9 @@
   <!-- Section 1: Roller Shades -->
   <section class="content-block left">
     <div class="text">
-      <h2>Motorized Roller Shades</h2>
+      <h2>Motorized Window Treatments</h2>
       <p>
-        Motorized roller shades offer a clean, modern aesthetic with the convenience of remote or app control. 
+        Motorized window treatments offer a clean, modern aesthetic with the convenience of remote or app control. 
         Easily adjust natural light levels throughout the day for energy savings, comfort, and privacy—all at the touch of a button.
       </p>
     </div>
@@ -71,6 +71,18 @@
     </div>
   </section>
 
+  <!-- Section 3: Shear Shades -->
+  <section class="content-block right">
+    <div class="image" style="background-image: url('images/shades-sheer.jpg');"></div>
+    <div class="text">
+      <h2>Motorized Sheer Shades</h2>
+      <p>
+        Motorized sheer shades provide a perfect balance of light control and privacy. 
+        With their elegant design and smooth operation, they enhance any room while allowing natural light to filter through.
+      </p>
+    </div>
+  </section>
+
   <!-- Gallery -->
   <section class="gallery-section">
     <h2>Gallery</h2>
@@ -80,8 +92,11 @@
         <img src="images/shades-gallery-1.jpg" class="gallery-image" alt="Shades Project 1" />
         <img src="images/shades-gallery-2.jpg" class="gallery-image" alt="Shades Project 2" />
         <img src="images/shades-gallery-3.jpg" class="gallery-image" alt="Shades Project 3" />
-        <img src="images/shades-gallery-4.jpg" class="gallery-image" alt="Shades Project 4" />
         <img src="images/shades-gallery-5.jpg" class="gallery-image" alt="Shades Project 5" />
+        <img src="images/shades-gallery-6.jpg" class="gallery-image" alt="Shades Project 6" />
+        <img src="images/shades-gallery-7.jpg" class="gallery-image" alt="Shades Project 7" />
+        <img src="images/shades-gallery-8.jpg" class="gallery-image" alt="Shades Project 8" />
+        <img src="images/shades-gallery-9.jpg" class="gallery-image" alt="Shades Project 9" />
       </div>
       <button class="nav next">&#10095;</button>
     </div>
