--- a/electrical-integration.html
+++ b/electrical-integration.html
@@ -61,15 +61,15 @@
     <div class="image" style="background-image: url('images/placeholder-electric2.jpg');"></div>
   </section>
 
-  <!-- <section class="content-block left">
+  <section class="content-block left">
     <div class="text">
       <h2>Applicance Hookup</h2>
       <p>
-        Blah blah blah
+        We provide expert appliance hookups for new and existing homes, including air-conditioning units, ovens, washers, etc. 
       </p>
     </div>
     <div class="image" style="background-image: url('images/placeholder-electric3.jpg');"></div>
-  </section> -->
+  </section>
   
 
   <section class="gallery-section">
