--- a/lighting.html
+++ b/lighting.html
@@ -52,11 +52,11 @@
         each plays its role in bringing the best in each piece of art, furniture or just in the overall aspect of the room.
       </p>
     </div>
-    <div class="image" style="background-image: url('images/placeholder1.jpg');"></div>
+    <div class="image" style="background-image: url('images/placeholder-lighting1.jpg');"></div>
   </section>
 
   <section class="content-block right">
-    <div class="image" style="background-image: url('images/placeholder2.jpg');"></div>
+    <div class="image" style="background-image: url('images/placeholder-lighting2.jpg');"></div>
     <div class="text">
       <h2>Lighting Control</h2>
       <p>
@@ -74,7 +74,7 @@
         Enjoy year-round comfort with ceiling fan installation, and take control of your home with smart automation systems that integrate lights, climate, and security.
       </p>
     </div>
-    <div class="image" style="background-image: url('images/placeholder-electric3.jpg');"></div>
+    <div class="image" style="background-image: url('images/placeholder-lighting3.jpg');"></div>
   </section>
   
 
@@ -111,7 +111,9 @@
         <img src="images/lighting-gallery-22.jpg" class="gallery-image" alt="Lighting Project 22" />
         <img src="images/lighting-gallery-23.jpg" class="gallery-image" alt="Lighting Project 23" />
         <img src="images/lighting-gallery-24.jpg" class="gallery-image" alt="Lighting Project 24" />
-        
+        <img src="images/lighting-gallery-25.jpg" class="gallery-image" alt="Lighting Project 25" />
+        <img src="images/lighting-gallery-26.jpg" class="gallery-image" alt="Lighting Project 26" />
+        <img src="images/lighting-gallery-27.jpg" class="gallery-image" alt="Lighting Project 27" />
           
       </div>
       <button class="nav next">&#10095;</button>
